@@ -62,6 +62,7 @@ Version 2.3.0 - The river knows.
 		  and "Advanced Chat Spam Filter" from eMule
 		* Allow download of multiple search results if search list 
 		  is sorted by status (thanks to DarkNRG)
+		* Fixed CFile::SetLength for large files 
 
 	Vollstrecker:
 		* Unify copyright lines
